--- a/css/default.css
+++ b/css/default.css
@@ -4,3 +4,19 @@
 body {
     font-family: barlow-regular, Arial, sans-serif;
 }
+
+hr {
+    border-top: 1px solid #707070;
+}
+
+@media only screen and (min-width: 767px) and (max-width: 991px) {
+    body {
+        font-size: 24px;
+    }
+}
+
+@media only screen and (max-width: 767px) {
+    body {
+        font-size: 30px;
+    }
+}
